modifs insertion texte

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -702,3 +702,11 @@ ul{
 #modalTextFormContainer{
   display: none;
 }
+
+.to-populate{
+  padding: 10px;
+}
+
+.filled-block{
+  background: none!important;
+}
