--- a/public/css/main.css
+++ b/public/css/main.css
@@ -331,6 +331,15 @@ ul{
   padding: 5px 35px;
 }
 
+.button-container{
+  text-align: center;
+}
+.submit-btn, .submit-btn:focus, .submit-btn:hover, .submit-btn:active{
+  background-color: #5cb85c;
+  border-color: #5cb85c;
+  padding: 5px 35px;
+}
+
 /*Datepicker*/
 
 [type="date"] {
@@ -478,7 +487,7 @@ ul{
   z-index: 2;
 }
 
-#dispositionContainer h2, #musiqueContainer h2{
+#dispositionContainer h2, #musiqueContainer h2, #bgImageContainer h2{
   font-size: 18px;
   text-align: center;
 }
@@ -545,7 +554,6 @@ ul{
 
  
 
-
 /*Popup Background*/
 
 #backgroundContainer{
@@ -554,22 +562,46 @@ ul{
     border: 4px solid black;
     width: 200px;
     position: absolute;
-    padding: 25px 0px 0px 0px;
+    padding: 10px 0px 0px 0px;
     left: 20px;
     z-index: 2;
     display: none;
 }
 
+/*popup image librairie*/
 #bgImageContainer{
   background-color: white;
   border-radius: 10px;
   border: 4px solid black;
-  width: 200px;
+  width: 420px;
+  min-height: 400px;
   position: absolute;
-  padding: 25px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
   left: 20px;
   z-index: 2;
+  display: none;
 }
+
+#imageUploaderContainer span, #musiqueUploaderContainer span{
+  display: block;
+}
+
+#imageUploaderContainer, #musiqueUploaderContainer{
+  text-align: center;
+  margin: 0px 10px;
+  height: 120px;
+  padding: 20px;
+  border: 2px dashed grey;
+}
+
+
+#imageUploader, #musiqueUploader{
+  width: 137px;
+  display: block;
+  margin: 0 auto;
+}
+/**/
+
 
 #backgroundContainer ul li:first-of-type{
   float:left;
@@ -597,17 +629,6 @@ ul{
   color: white;
 }
 
-#musiqueContainer{
-  background-color: white;
-  border-radius: 10px;
-  border: 4px solid black;
-  width: 300px;
-  position: absolute;
-  padding: 25px;
-  left: 180px;
-  z-index: 2;
-  display: none;
-}
 
 .upload-drop-zone {
   height: 200px;
@@ -618,6 +639,117 @@ ul{
 #imagePicker, #addImageContent{
   display: none;
 }
+
+#bgImageGallery{
+  width: 354px;
+  margin: 20px auto;
+}
+
+ul.thumbnails.image_picker_selector li .thumbnail img {
+  -webkit-user-drag: none;
+  width: 104px;
+  height: 104px;
+}
+
+ul.thumbnails.image_picker_selector li {
+  margin: 0px;
+  float: left;
+}
+ul.thumbnails.image_picker_selector li .thumbnail {
+  padding: 6px;
+  border: none;
+}
+ul.thumbnails.image_picker_selector {
+  width: 354px;
+  margin: 0 auto;
+}
+
+ul.thumbnails.image_picker_selector li .thumbnail.selected {
+  background: #28a745;
+  border-radius: 4px;
+}
+
+#bgImageGalleryTitle, #musiqueGalleryTitle{
+  width: 100%;
+  background-color: #f1f1f1;
+  display: inline-block;
+  font-weight: 600;
+  padding: 6px 20px;
+}
+
+
+/*Widget Musique*/
+
+
+#musiqueContainer{
+  display: none;
+}
+
+#musiqueContainer{
+  background-color: white;
+  border-radius: 10px;
+  border: 4px solid black;
+  width: 420px;
+  position: absolute;
+  padding: 25px 0px 0px 0px;
+  left: 200px;
+  z-index: 2;
+}
+
+
+#musiqueGalleryTitle{
+  text-align: center;
+}
+
+#musiqueGallery h2{
+  margin-top:20px;
+}
+
+#musiqueGallery ul{
+  padding: 0px;
+  width: 370px;
+  margin: 0 auto;
+}
+
+#musiqueGalleryList{
+  height: 254px;
+  overflow: auto;
+  padding-top: 20px;
+}
+
+
+#musiqueGallery ul li{
+  display: inline-block;
+  margin: 0px 10px;
+  width: 100px;
+  margin-bottom: 0px;
+}
+
+#musiqueGalleryList ul li p{
+  text-align: center;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+#musiqueGallery .categorie{
+  display: none;
+}
+
+#sound{
+  position: absolute;
+  top: 22px;
+  right: 200px;
+}
+
+.selected-audio{
+  border: 5px solid #5cb85c;
+  border-radius: 20px;
+}
+
+#submitAudio{
+  display: none;
+}
+
 
 /* skin.css Style*/
 .upload-drop-zone {
